fix(booking-card): commented out paypal + word wrap issues

--- a/resources/scss/components/_booking_card.scss
+++ b/resources/scss/components/_booking_card.scss
@@ -88,6 +88,9 @@
         &--large {
             font-size: var(--fs-500);
         }
+        &--closed {
+            white-space: wrap;
+        }
     }
 
     &__coupon-container {
